--- a/package.json
+++ b/package.json
@@ -4,16 +4,28 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "devtools": "react-devtools"
   },
   "dependencies": {
+    "lodash": "^4.17.5",
+    "lottie-react-native": "^2.3.2",
+    "native-base": "^2.3.10",
     "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.2"
+    "react-native": "0.54.2",
+    "react-native-linear-gradient": "^2.4.0",
+    "react-navigation": "^1.5.6",
+    "react-navigation-redux-helpers": "^1.0.3",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.2",
+    "react-devtools": "^3.1.0",
     "react-test-renderer": "^16.3.0-alpha.1"
   },
   "jest": {
